--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,6 +32,14 @@
         android:id="@+id/ThirdFragment"
         android:name="Fragments.ThirdFragment"
         android:label="@string/third_fragment_label"
-        tools:layout="@layout/fragment_third"
-        />
+        tools:layout="@layout/fragment_third">
+
+        <action
+            android:id="@+id/action_ThirdFragment_to_FirstFragment"
+            app:destination="@id/FirstFragment" />
+        <action
+            android:id="@+id/action_ThirdFragment_to_SecondFragment"
+            app:destination="@id/SecondFragment" />
+
+    </fragment>
 </navigation>
