Un poco de la estructura de clean Architecture e intento de request

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="Fragments.Login">
+    tools:context=".ui.fragments.Login">
 
     <ImageView
         android:id="@+id/pizza_logo"
