--- a/app/src/main/res/menu/bottom_nav_bar.xml
+++ b/app/src/main/res/menu/bottom_nav_bar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/home"
+        android:id="@+id/MainPage"
         android:icon="@drawable/ic_baseline_home"
         android:title="home"
         app:showAsAction="ifRoom"/>
@@ -15,9 +15,9 @@
         app:showAsAction="ifRoom"/>
 
     <item
-        android:id="@+id/logout"
-        android:icon="@drawable/ic_logout"
-        android:title="Cerrar sesion"
+        android:id="@+id/configu"
+        android:icon="@drawable/ic_baseline_settings"
+        android:title="Configuracion"
         app:showAsAction="ifRoom"/>
 
 
