--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -30,7 +30,7 @@
         android:id="@+id/email"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
-        android:text="@string/email"
+        android:hint="Correo electrónico"
         app:layout_constraintBottom_toTopOf="@id/password_Acces"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
         android:id="@+id/password_Acces"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
-        android:text="@string/passwordA"
+        android:hint="@string/passwordA"
         app:layout_constraintTop_toBottomOf="@id/email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
