--- a/app/src/main/res/layout/pizza_list_s.xml
+++ b/app/src/main/res/layout/pizza_list_s.xml
@@ -12,34 +12,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
-            android:id="@+id/pizza_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="centerInside"
+            android:id="@+id/pizza_image_s"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/pizza_name"
+            app:layout_constraintEnd_toStartOf="@id/pizza_name_s"
             tool:src="image pizza"
             />
 
         <TextView
-            android:id="@+id/pizza_name"
+            android:id="@+id/pizza_name_s"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/pizza_description"
-            app:layout_constraintStart_toEndOf="@id/pizza_image"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/pizza_description_s"
+            app:layout_constraintStart_toEndOf="@id/pizza_image_s"
+
             tool:text="nombre pizza"
             />
         <TextView
-            android:id="@+id/pizza_description"
-            android:layout_width="wrap_content"
+            android:id="@+id/pizza_description_s"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/pizza_name"
-            app:layout_constraintStart_toEndOf="@id/pizza_image"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pizza_name_s"
+            app:layout_constraintStart_toEndOf="@id/pizza_image_s"
             app:layout_constraintBottom_toBottomOf="parent"
             tool:text="descripcion pizza"
             />
