--- a/app/src/main/res/layout/main_page.xml
+++ b/app/src/main/res/layout/main_page.xml
@@ -11,8 +11,8 @@
         android:id="@+id/crea_tupizza_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginLeft="@dimen/dimension_40"
+        android:layout_marginTop="@dimen/margin_24"
         android:text="@string/pizza_create"
         android:textStyle="bold"
         android:textColor="@color/design_default_color_primary"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/pizza_create"
         android:adjustViewBounds="true"
-        android:layout_marginBottom="256dp"
+        android:layout_marginBottom="@dimen/dimension_256"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/crea_tupizza_label"
@@ -35,9 +35,10 @@
         />
 
     <Button
-        android:layout_marginVertical="5dp"
-        android:layout_width="199dp"
-        android:layout_height="40dp"
+        android:id="@+id/crearPizza"
+        android:layout_marginVertical="@dimen/half_fab_margin"
+        android:layout_width="@dimen/dimension_200"
+        android:layout_height="@dimen/dimension_40"
         app:layout_constraintTop_toBottomOf="@id/pizza_logo"
         app:layout_constraintBottom_toTopOf="@+id/favorite_label"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,8 +51,8 @@
         android:id="@+id/favorite_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Favoritos"
-        app:layout_constraintTop_toBottomOf="@id/pizza_logo"
+        android:text="@string/fav"
+        app:layout_constraintTop_toBottomOf="@id/crearPizza"
         app:layout_constraintBottom_toTopOf="@id/Reciclerview_favorite"
         app:layout_constraintStart_toStartOf="parent"
         />
@@ -69,7 +70,7 @@
         android:id="@+id/recommended_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Recomendadas"
+        android:text="@string/rec"
         app:layout_constraintTop_toBottomOf="@id/Reciclerview_favorite"
         app:layout_constraintBottom_toTopOf="@id/Reciclerview_recommended"
         app:layout_constraintStart_toStartOf="parent"
