--- a/app/src/main/res/layout/pizza_list_s.xml
+++ b/app/src/main/res/layout/pizza_list_s.xml
@@ -4,17 +4,17 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tool="http://schemas.android.com/tools"
-    app:cardElevation="4dp"
-    android:layout_marginHorizontal="16dp"
-    android:layout_marginTop="8dp">
+    app:cardElevation="@dimen/Card_elevation"
+    android:layout_marginHorizontal="@dimen/fab_margin"
+    android:layout_marginTop="@dimen/half_fab_margin">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/pizza_image_s"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="@dimen/image_dimen"
+            android:layout_height="@dimen/image_dimen"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,16 +26,18 @@
             android:id="@+id/pizza_name_s"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/fab_margin"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/pizza_description_s"
             app:layout_constraintStart_toEndOf="@id/pizza_image_s"
-
             tool:text="nombre pizza"
             />
         <TextView
             android:id="@+id/pizza_description_s"
-            android:layout_width="200dp"
+            android:layout_width="@dimen/dimension_200"
             android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/fab_margin"
+            android:paddingBottom="@dimen/Card_elevation"
             app:layout_constraintTop_toBottomOf="@id/pizza_name_s"
             app:layout_constraintStart_toEndOf="@id/pizza_image_s"
             app:layout_constraintBottom_toBottomOf="parent"
