--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,16 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="Card_elevation">4dp</dimen>
+    <dimen name="half_fab_margin">8dp</dimen>
+    <dimen name="image_dimen">150dp</dimen>
+    <dimen name="dimension_200">200dp</dimen>
+    <dimen name="dimension_40">40dp</dimen>
+    <dimen name="margin_24">24dp</dimen>
+    <dimen name="dimension_256">256dp</dimen>
+    <dimen name="dimension_124">124dp</dimen>
+    <dimen name="fab_width">360dp</dimen>
+    <dimen name="dimension_336">336dp</dimen>
+    <dimen name="dimension_56">56dp</dimen>
+    <dimen name="dimension_144">144dp</dimen>
+    <dimen name="fab_marginx4">64dp</dimen>
 </resources>
