agregue la pantalla de seleccionar tamano pizza, y agregue una funcion en los ryclerviews

--- a/app/src/main/res/layout/main_page.xml
+++ b/app/src/main/res/layout/main_page.xml
@@ -45,7 +45,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:textColor="@color/background"
         android:background="@drawable/rounded_corners"
-        android:text="Crear pizza"/>
+        android:text="Crear Pizza"/>
 
     <TextView
         android:id="@+id/favorite_label"
